# felix

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  Taskfile.yml  deny.toml  mkdocs.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml
crates/felix-authz/: Cargo.toml  README.md
crates/felix-authz/src/: action.rs  casbin_model.rs  errors.rs  jwks.rs  lib.rs  matcher.rs  permission.rs  resource.rs  token.rs  types.rs
crates/felix-broker/: Cargo.toml  README.md
crates/felix-broker/src/: lib.rs  timings.rs  timings_telemetry.rs
crates/felix-client/: Cargo.toml  README.md
crates/felix-client/src/: config.rs  lib.rs  macros.rs  tests.rs  timings.rs  timings_telemetry.rs
crates/felix-client/src/client/: cache.rs  client.rs  event_router.rs  inprocess.rs  mod.rs  publisher.rs  sharding.rs  subscription.rs
crates/felix-client/src/counters/: mod.rs
crates/felix-client/src/wire/: ack.rs  bench_ts.rs  decode_log.rs  frame_io.rs  mod.rs
crates/felix-common/: Cargo.toml  README.md
crates/felix-common/src/: lib.rs
crates/felix-conformance/: Cargo.toml
crates/felix-conformance/src/: main.rs
crates/felix-consensus/: Cargo.toml  README.md
crates/felix-consensus/src/: lib.rs
crates/felix-crypto/: Cargo.toml  README.md
crates/felix-crypto/src/: lib.rs
crates/felix-metadata/: Cargo.toml  README.md
crates/felix-metadata/src/: lib.rs
crates/felix-router/: Cargo.toml  README.md
crates/felix-router/src/: lib.rs
crates/felix-storage/: Cargo.toml  README.md
crates/felix-storage/src/: ephemeral_cache.rs  lib.rs  log.rs  tiered.rs
crates/felix-storage/src/storage_backends/: mod.rs  serializers.rs  simple_file.rs
crates/felix-storage/src/storage_backends/simple_file/: data_file.rs  index_file.rs  mod.rs  simple_file.rs
crates/felix-transport/: Cargo.toml  README.md
crates/felix-transport/src/: lib.rs
crates/felix-wire/: Cargo.toml  README.md
crates/felix-wire/src/: lib.rs
crates/felix-wire/tests/: vectors.rs
crates/felix-wire/tests/vectors/: README.md  cache_get.hex  cache_get.json  cache_put.hex  cache_put.json  cache_value.hex  cache_value.json  error.hex  error.json  event.hex  event.json  ok.hex  ok.json  publish.hex  publish.json  subscribe.hex  subscribe.json
demos/: README.md
demos/broker/: cache_demo.rs  latency_demo.rs  notifications_demo.rs  orders_demo.rs  pubsubdemo.rs  simple_pubsub_demo.rs
demos/cross_tenant_isolation/: Cargo.toml  README.md
demos/cross_tenant_isolation/src/: main.rs
demos/rbac-live/: Cargo.toml
demos/rbac-live/src/: main.rs
docker/: broke.Dockerfile  broker.Dockerfile  controlplane.Dockerfile  otel-collector.Dockerfile  prometheus.Dockerfile
docker/otel-collector/: config.yml
docker/prometheus/: prometheus.yml
docs/: architecture.md  auth.md  broker-config.md  client-config.md  control-plane.md  demos.md  design.md  protocol.md  semantics.md  todos.md
docs-site/: README.md  requirements.txt
docs-site/docs/: index.md
docs-site/docs/api/: broker-api.md  client-sdk.md  control-plane-api.md
docs-site/docs/architecture/: components.md  semantics.md  system-design.md  wire-protocol.md
docs-site/docs/demos/: notifications.md  orders.md  overview.md
docs-site/docs/deployment/: docker-compose.md  kubernetes.md  local.md
docs-site/docs/development/: building.md  contributing.md  project-structure.md
docs-site/docs/features/: cache.md  observability.md  performance-platform-notes.md  performance.md  pubsub.md  quic-transport.md  security.md
docs-site/docs/getting-started/: installation.md  overview.md  quickstart.md
docs/security/: rbac.md
githooks/: pre-commit
scripts/: demo.sh  devcontainer-setup.sh  setup-githooks.sh
scripts/perf/: make_charts.py  normalize_and_aggregate.py  presets.yml  publish_conn_sweep.py  render_markdown_snippets.py  run_latency_matrix.py
services/agent/: Cargo.toml  README.md
services/broker/: Cargo.toml  README.md
services/broker/src/: auth.rs  auth_demo.rs  config.rs  controlplane.rs  lib.rs  main.rs  observability.rs  quic.rs  timings.rs  timings_telemetry.rs  transport.rs
services/broker/src/test_support/: http_test.rs  mod.rs
services/broker/src/transport/: mod.rs
services/broker/src/transport/quic/: codec.rs  conn.rs  errors.rs  mod.rs  streams.rs  telemetry.rs
services/broker/src/transport/quic/handlers/: publish.rs  subscribe.rs
services/broker/src/transport/quic/streams/: ack_waiter.rs  control.rs  frame_source.rs  handlers.rs  hooks.rs  mod.rs  tests.rs  uni.rs  writer.rs
services/broker/tests/: auth_integration.rs  auth_jwks_refresh.rs  demo_notifications.rs  demo_orders.rs  latency_text.rs  quic_publish.rs  quic_subscribe.rs
services/controlplane/: Cargo.toml  README.md  docker-compose.yml
services/controlplane/migrations/: 0001_init.sql  0002_auth.sql  0003_bootstrap.sql  0004_ed25519_keys_bytea.sql
services/controlplane/src/: app.rs  config.rs  lib.rs  main.rs  observability.rs
services/controlplane/src/api/: bootstrap.rs  caches.rs  error.rs  mod.rs  namespaces.rs  openapi.rs  regions.rs  streams.rs  system.rs  tenants.rs  types.rs
services/controlplane/src/auth/: admin.rs  exchange.rs  felix_token.rs  idp_registry.rs  jwks.rs  keys.rs  mod.rs  oidc.rs  principal.rs  rbac.rs
services/controlplane/src/auth/rbac/: authorize.rs  enforcer.rs  permissions.rs  policy_store.rs
services/controlplane/src/model/: cache.rs  mod.rs  namespace.rs  stream.rs  tenant.rs
services/controlplane/src/store/: memory.rs  mod.rs  postgres.rs  postgres_tests.rs
services/controlplane/tests/: api_coverage.rs  auth_admin.rs  auth_bootstrap.rs  auth_exchange.rs  auth_jwks.rs  http_helpers.rs  http_smoke.rs  main_runtime.rs  pg_store.rs  pg_store_e2e.rs
services/controlplane/tests/common/: mod.rs
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
test-harness/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-test.sh
test-harness/src/: init_broker.rs  lib.rs  publisher.rs  subscriber.rs  tls.rs
(+31 files in other folders)
