[workspace]
resolver = "2"
members = [
  "crates/felix-common",
  "crates/felix-wire",
  "crates/felix-transport",
  "crates/felix-storage",
  "crates/felix-broker",
  "crates/felix-metadata",
  "crates/felix-consensus",
  "crates/felix-router",
  "crates/felix-crypto",
  "crates/felix-authz",
  "crates/felix-client",
  "crates/felix-conformance",
  "services/controlplane",
  "services/agent",
  "services/broker",
]

[profile.profiler]
inherits = "release"
debug = true

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
