[package]
name = "felix-authz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["pkcs8"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
casbin = { version = "2.8.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
tokio = { version = "1.10.0", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.10.0", features = ["macros", "rt"] }
