[package]
name = "felix-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
metrics = "0.23"
felix-storage = { path = "../felix-storage", version = "0.1.0" }
