[package]
name = "felix-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
metrics = "0.24"
felix-storage = { path = "../felix-storage", version = "0.1.0" }
arc-swap = "1.7"
ahash = "0.8"
hashbrown = { version = "0.14", features = ["equivalent"] }
smallvec = "1.13"
slab = "0.4"
parking_lot = "0.12"

[features]
default = []
telemetry = []
perf_debug = []

[dev-dependencies]
serial_test = "3"
felix-wire = { path = "../felix-wire", version = "0.1.0" }
