[package]
name = "felix-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
felix-broker = { path = "../felix-broker", version = "0.1.0" }
felix-storage = { path = "../felix-storage", version = "0.1.0" }
