[package]
name = "felix-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
metrics = "0.24"
serde = { workspace = true, features = ["derive"] }
serde_yaml_ng = { workspace = true }
felix-broker = { path = "../felix-broker", version = "0.1.0" }
felix-storage = { path = "../felix-storage", version = "0.1.0" }
felix-transport = { path = "../felix-transport", version = "0.1.0" }
felix-wire = { path = "../felix-wire", version = "0.1.0" }
quinn = "0.11"

[features]
default = []
telemetry = []

[dev-dependencies]
rcgen = "0.14"
rustls = "0.23"
serial_test = "3"
tempfile = "3"
tracing-subscriber = { workspace = true }
