[package]
name = "felix-conformance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
broker = { path = "../../services/broker", version = "0.1.0" }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
felix-authz = { path = "../felix-authz", version = "0.1.0" }
felix-broker = { path = "../felix-broker", version = "0.1.0" }
felix-client = { path = "../felix-client", version = "0.1.0" }
felix-storage = { path = "../felix-storage", version = "0.1.0" }
felix-transport = { path = "../felix-transport", version = "0.1.0" }
felix-wire = { path = "../felix-wire", version = "0.1.0" }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
quinn = "0.11"
rcgen = "0.14"
rustls = "0.23"
tokio = { workspace = true }
