[package]
name = "felix-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1.89"
rkyv = {version = "0.8.14", features = ["bytecheck"]}
anyhow = "1.0.100"

[dev-dependencies]
tokio = { workspace = true }
