[package]
name = "broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "felix-broker"
path = "src/main.rs"

[[bin]]
name = "pubsub-demo-simple"
path = "../../demos/broker/pubsubdemo.rs"

[[bin]]
name = "cache-demo"
path = "../../demos/broker/cachedemo.rs"

[[bin]]
name = "latency-demo"
path = "../../demos/broker/latencydemo.rs"

[[bin]]
name = "pubsub-demo-notifications"
path = "../../demos/broker/notifications_demo.rs"

[[bin]]
name = "pubsub-demo-orders"
path = "../../demos/broker/orders_demo.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
felix-broker = { path = "../../crates/felix-broker", version = "0.1.0" }
felix-client = { path = "../../crates/felix-client", version = "0.1.0" }
felix-authz = { path = "../../crates/felix-authz", version = "0.1.0" }
felix-transport = { path = "../../crates/felix-transport", version = "0.1.0" }
felix-wire = { path = "../../crates/felix-wire", version = "0.1.0" }
felix-storage = { path = "../../crates/felix-storage", version = "0.1.0" }
bytes = { workspace = true }
dashmap = "6"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
axum = "0.7"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
quinn = "0.11"
rcgen = "0.12"
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.25"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = []
telemetry = ["felix-client/telemetry", "felix-broker/telemetry"]

[lints.rust]
