[package]
name = "controlplane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.25"
tower-http = { version = "0.6", features = ["trace"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
async-trait = "0.1"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "json"] }

[dev-dependencies]
tower = "0.5"
tempfile = "3"
serial_test = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[lib]
name = "controlplane"
path = "src/lib.rs"

[features]
pg-tests = []
