[package]
name = "controlplane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "felix-controlplane"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.25"
tower-http = { version = "0.6", features = ["trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
async-trait = "0.1"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "json"] }
casbin = { version = "2.8.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
dashmap = "6"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hex = "0.4"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
rand = "0.9.2"

[dev-dependencies]
tower = "0.5"
tempfile = "3"
serial_test = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "json"] }
base64 = "0.22"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

[lib]
name = "controlplane"
path = "src/lib.rs"

[features]
pg-tests = []
